tests/paczka2/big_fuzzy/68459975.err
Error in line 2: BMaKkNS S103 14,6
Error in line 5: T2RYbpkx A826 21,35
Error in line 8: BMaKkNS S516 53,9
Error in line 24: fu4n A826 199,9
Error in line 18: T2RYbpkx S103 10,8
Error in line 29: JwwYD A826 22,0
Error in line 36: JwwYD S103 70,3
Error in line 39: T2RYbpkx S314 52,4
Error in line 55: S103 S314 28,2
Error in line 56: S103 A826 29,1
Error in line 60: fu4n A826 -4,6
Error in line 62: JWG8E A826 87,1
Error in line 64: JwwYD S103 36,4
Error in line 69: ?S:14
Error in line 75: T2RYbpkx S314 77,9
Error in line 86: QPNjI S314 87,2
Error in line 85: T2RYbpkx A826 75,3
Error in line 89: QPNjI S103 4,1
Error in line 95: JwwYD S103 87,4
Error in line 104: JwwYD S516 53,2
Error in line 108: T2RYbpkx A826 87,1
Error in line 128: QPNjI S314 62,6
Error in line 136: JwwYD S103 14,1
Error in line 133: T2RYbpkx A826 69,6
Error in line 135: BMaKkNS S103 96,6
Error in line 138: T2RYbpkx S103 92,0
Error in line 156: fu4n S314 2,6
Error in line 155: JWG8E S103 77,3
Error in line 169: QPNjI S314 88,36
Error in line 166: S103 S103 278,9
Error in line 180: S103 S516 87,7
Error in line 181: QPNjI S314 135,6
Error in line 201: BMaKkNS S314 308,6
Error in line 204: BMaKkNS A826 97,0
Error in line 206: QPNjI S103 98,7
Error in line 212: S103 A826 :1,0
Error in line 170: JWG8E S516 325,0
Error in line 216: S103 A826 15,6
Error in line 221: S103 S314 0,6
Error in line 225: QPNjI S103 449,8
